--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"@eslint/compat": "^1.4.0",
 		"@eslint/js": "^9.36.0",
 		"@internationalized/date": "^3.10.0",
-		"@lucide/svelte": "^0.545.0",
+		"@lucide/svelte": "^0.544.0",
 		"@sveltejs/adapter-auto": "^6.1.0",
 		"@sveltejs/kit": "^2.43.2",
 		"@sveltejs/vite-plugin-svelte": "^6.2.0",
@@ -55,6 +55,8 @@
 		"vitest-browser-svelte": "^1.1.0"
 	},
 	"dependencies": {
-		"postgres": "^3.4.7"
+		"better-auth": "^1.3.27",
+		"postgres": "^3.4.7",
+		"zod": "^4.1.12"
 	}
 }
